<resources>
    <string name="app_name">Life Health</string>
    <string name="sexe_text">Sexe : </string>
    <string name="radio_text_male">Male</string>
    <string name="radio_text_female">Female</string>
    <string name="text_view_birthday">Naissance : </string>
    <string name="height_text">Taille : </string>
    <string name="weight_text">Poids : </string>
    <string name="type_weight_text">Kg.</string>
    <string name="text_view_age">Age :  </string>
    <string name="total_step_text">Pas totaux :  </string>
    <string name="total_hydratation_text">Hydratation totale :  </string>
    <string name="user_profile">Profile Utilisateur</string>
    <string name="button_modify_profile">Modifier</string>
    <string name="type_height_text">cm.</string>
    <string name="save_button_text">Sauvegarder</string>
    <string name="button_exit_modify_profile">Annuler</string>
    <string name="type_hydratation_text">Verres</string>
    <string name="application_name">Life Health</string>
    <string name="text_view_step">Pas</string>
    <string name="slash">/</string>
    <string name="text_view_sleep">Sommeil</string>
    <string name="text_view_type_hour">H</string>
    <string name="text_view_type_minute">min</string>
    <string name="text_view_water">Eau</string>
    <string name="text_view_glass_type">verres</string>
    <string name="text_button_add_glass_drink">+</string>
    <string name="text_button_remove_glass_drink">-</string>
    <string name="text_view_weight">Poids</string>
    <string name="text_view_type_weight">kg</string>
    <string name="step_text">Pas :</string>
    <string name="hydratation_text">Hydratation :</string>
    <string name="height_text_with_type">Taille (cm.)</string>
    <string name="weight_text_with_type">Poids (Kg.)</string>
    <string name="step_text_with_type">Pas</string>
    <string name="hydratation_text_with_type">Hydratation (Verres d\'eau)</string>
    <string name="nav_bar_text_home">Home</string>
    <string name="nav_bar_text_profil">Profil</string>
    <string name="nav_bar_text_graphics">Graphics</string>
</resources>